[package]
name = "application_one"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.32.1"
reqwest = { version = "0.12.23", features = ["json"] }
rfd = "0.15.4"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }


[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1
panic = 'abort'
strip = true
